commit before switching to master branch

--- a/supportal/firstApp/templates/adduser.html
+++ b/supportal/firstApp/templates/adduser.html
@@ -16,27 +16,27 @@
     			{{ form.username.errors }}
     				<label for="{{ form.username.id_for_label }}">Username:</label>
     			{{ form.username }}
-    		</div>
+    		</div><br/>
     		<div class="fieldWrapper">
     			{{ form.first_name.errors }}
     				<label for="{{ form.first_name.id_for_label }}">First Name:</label>
     			{{ form.first_name }}
-    		</div>
+    		</div><br/>
     		<div class="fieldWrapper">
     			{{ form.last_name.errors }}
     				<label for="{{ form.last_name.id_for_label }}">Last Name:</label>
     			{{ form.last_name }}
-    		</div>
+    		</div><br/>
     		<div class="fieldWrapper">
     			{{ form.email.errors }}
     				<label for="{{ form.email.id_for_label }}">Email Address:</label>
     			{{ form.email }}
-    		</div>
+    		</div><br/>
     		<div class="fieldWrapper">
     			{{ form.password.errors }}
-    				<label type="password" for="{{ form.password.id_for_label }}">Password:</label>
+    				<label value="password" for="{{ form.password.id_for_label }}">Password:</label>
     			{{ form.password }}
-    		</div>
+    		</div><br/>
 
     		<button type="submit">Create Account</button>
     		<br></br>
