--- a/supportal/firstApp/templates/registration/password_reset_email.html
+++ b/supportal/firstApp/templates/registration/password_reset_email.html
@@ -4,7 +4,7 @@ You're receiving this e-mail because someone requested a password reset for {{ e
 
 Please go to the following page and set your new password:
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+{{ protocol }}://hurst.pythonanywhere.com/{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
 
 Thank you for using Supportal!
