--- a/supportal/firstApp/templates/issue_form.html
+++ b/supportal/firstApp/templates/issue_form.html
@@ -1,7 +1,7 @@
 <html>
 	{% extends 'base.html' %}
 	{% block content %}
-	{% if hours_avail > 0 or request.user.is_superuser %}
+	<!-- {% if hours_avail > 0 or request.user.is_superuser %} -->
 	<div class="standard">
 	<body>
 		<h1>Create Issue</h1>
@@ -23,6 +23,6 @@
 	<p>You have no time available for requests. Contact Oak Labs for more information.</p><br />
 	<button type="button"><a href="/supportal/main">Back to Main Menu</a></button>
 	</div>
-	{% endif %}
+	<!-- {% endif %}
 	{% endblock %}
 </html>
